--- a/Milestone 2 Backup.html
+++ b/Milestone 2 Backup.html
@@ -159,6 +159,19 @@
                         img.src = e.target.result;
                     };
                     reader.readAsDataURL(file);
+                } else if (file.type.startsWith('video/')) {
+                    var reader = new FileReader();
+                    reader.onload = function (e) {
+                        var video = document.createElement('video');
+                        video.src = e.target.result;
+                        video.autoplay = true;
+                        video.loop = true;
+                        video.muted = true;
+                        video.addEventListener('loadeddata', function () {
+                            drawVideo(video);
+                        });
+                    };
+                    reader.readAsDataURL(file);
                 }
             });
         }
@@ -180,6 +193,31 @@
 
             layer.add(image);
             layer.draw();
+        }
+
+        function drawVideo(videoObj) {
+            var vidWidth = videoObj.videoWidth;
+            var vidHeight = videoObj.videoHeight;
+            var scale = Math.min(stage.width() / vidWidth, stage.height() / vidHeight);
+
+            var videoImage = new Konva.Image({
+                image: videoObj,
+                x: (stage.width() - vidWidth * scale) / 2,
+                y: (stage.height() - vidHeight * scale) / 2,
+                width: vidWidth * scale,
+                height: vidHeight * scale,
+                draggable: true,
+                name: 'selectable'
+            });
+
+            layer.add(videoImage);
+
+            var anim = new Konva.Animation(function() {
+                layer.batchDraw();
+            }, layer);
+            anim.start();
+
+            videoObj.play();
         }
 
         function changeBackgroundColor(color) {
